<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pages.Carts">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/product_name"
            android:gravity="center"
            android:fontFamily="@font/pnu_medium"
            android:background="@color/bink"
            android:layout_gravity="center"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:text="@string/Carts"
            />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="30dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="0dp"
        android:layoutDirection="rtl"
        android:layout_marginBottom="0dp"
        android:layout_alignParentRight="true"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rce"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            >
        </androidx.recyclerview.widget.RecyclerView>



        <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/pnu_medium"
                            android:text="@string/Dilivey1"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Dilivey"
                            android:fontFamily="@font/ge_ss_two_medium"
                            android:textSize="16sp"
                            android:textColor="@color/bink"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:id="@+id/cardtotal"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total"
                            android:textSize="20sp"
                            android:fontFamily="@font/pnu_medium"
                            android:textColor="@color/black"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Total"
                            android:fontFamily="@font/pnu_medium"
                            android:textSize="20sp"
                            android:textColor="@color/bink"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

    </ScrollView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bink"
            android:text="@string/Confirmation"
            android:fontFamily="@font/ge_ss_two_medium"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:lastBaselineToBottomHeight="@dimen/cardview_compat_inset_shadow"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_marginTop="0dp"
            />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>