<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pages.detiles_order">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/product_name"
            android:gravity="center"
            android:fontFamily="@font/pnu_medium"
            android:background="@color/bink"
            android:layout_gravity="center"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
            android:layout_alignParentTop="true"
            android:text="@string/Order_det"
            />





        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_alignParentRight="true"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/cardDate"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Date"
                            android:textSize="20sp"
                            android:fontFamily="@font/pnu_medium"
                            android:textColor="@color/black"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textSize="20sp"
                            android:fontFamily="@font/pnu_medium"
                            android:textColor="@color/black"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rce"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    >
                </androidx.recyclerview.widget.RecyclerView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:id="@+id/cardtotal"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Total"
                            android:fontFamily="@font/ge_ss_two_medium"
                            android:textSize="20sp"
                            android:textColor="@color/bink"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total"
                            android:textSize="20sp"
                            android:fontFamily="@font/pnu_medium"
                            android:textColor="@color/black"
                            />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </ScrollView>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>