<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F0F0"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F0F0"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bink"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/header"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginRight="20dp"
                        android:layout_gravity="left"
                        android:src="@drawable/scander"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/carts"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_gravity="center"
                        android:layoutDirection="rtl"
                        android:src="@drawable/ic_add_shopping_cart_black_24dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Hallo"
                        android:gravity="left"
                        android:fontFamily="@font/pnu_medium"
                        android:layout_marginLeft="20dp"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:id="@+id/name_app"
                        android:textSize="20dp"/>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="20dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ed"
                        android:hint="@string/Search_hint"
                        android:fontFamily="@font/pnu_medium"
                        android:background="@drawable/edittext_login"
                        android:drawableLeft="@drawable/ic_search_black_24dp"
                        android:drawablePadding="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="15dp"
                        />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"

                >

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp"
                    android:id="@+id/card_chipess"
                    app:cardBackgroundColor="@color/white"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">



                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/chipese"
                        android:layout_gravity="center"
                        android:id="@+id/imgjk"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/chipes"
                        android:gravity="center"
                        android:fontFamily="@font/pnu_medium"
                        android:layout_marginTop="-20dp"
                        android:textSize="20sp"
                        android:textColor="@color/bink"
                        android:text="@string/Chipes"
                       />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp"
                    app:cardBackgroundColor="@color/white"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/swiet"
                        android:layout_gravity="center"
                        android:id="@+id/img"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sweets"
                        android:gravity="center"
                        android:fontFamily="@font/pnu_medium"
                        android:layout_marginTop="-20dp"
                        android:textSize="20sp"
                        android:textColor="@color/bink"
                        android:text="@string/Swites"
                       />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp"
                    app:cardBackgroundColor="@color/white"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/gift"
                        android:layout_gravity="center"

                        android:id="@+id/img_gift"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/gift"
                        android:fontFamily="@font/pnu_medium"
                        android:gravity="center"
                        android:layout_marginTop="-20dp"
                        android:textSize="20sp"
                        android:textColor="@color/bink"
                        android:text="@string/Gift"
                        />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="25dp"
                android:fontFamily="@font/ge_ss_two_medium"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:text="@string/Sale_Offers"
                android:foreground="@drawable/text_price_line"
                />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rce"
        android:layout_marginLeft="25dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        >
    </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
