<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroubd_button_login"
    tools:context=".Pages.Singup">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/re"
        android:gravity="center"
        android:background="@drawable/backgroubd_button_login"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:id="@+id/activity_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:background="@drawable/backgroubd_button_login"
            android:gravity="center"
            android:layout_gravity="center">


            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/scander"
                android:layout_marginTop="-60dp"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="-10dp"
                >
                <EditText
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_name"
                    android:inputType="text"
                    android:fontFamily="@font/pnu_medium"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:shadowColor="@color/yeloow"
                    android:outlineAmbientShadowColor="@color/yeloow"
                    android:gravity="left"
                    android:background="@drawable/edittext_login"
                    android:hint="@string/name_hint"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="20dp"
                >
                <EditText
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_phone"
                    android:inputType="phone"
                    android:fontFamily="@font/pnu_medium"
                    android:drawableLeft="@drawable/ic_contact_phone_black_24dp"
                    android:drawablePadding="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    android:shadowColor="@color/yeloow"
                    android:outlineAmbientShadowColor="@color/yeloow"
                    android:gravity="left"
                    android:background="@drawable/edittext_login"
                    android:hint="@string/phone_number_hint"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="20dp"
                >
                <LinearLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <EditText
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:id="@+id/ed_password"
                        android:drawablePadding="10dp"
                        android:paddingLeft="50dp"
                        android:fontFamily="@font/pnu_medium"
                        android:gravity="left"
                        android:background="@drawable/edittext_login"
                        android:hint="@string/Password_hint"
                        />

                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageseyes"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_visibility_off_black_24dp"
                    android:layout_gravity="left"
                    android:onClick="passhiden"
                    android:layout_marginLeft="15dp"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="20dp"
                >
                <LinearLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <EditText
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/pnu_medium"
                        android:id="@+id/ed_passwordconfirm"
                        android:drawablePadding="10dp"
                        android:paddingLeft="50dp"
                        android:gravity="left"
                        android:background="@drawable/edittext_login"
                        android:hint="@string/confirm_Password_hint"
                        />

                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageseyes2"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_visibility_off_black_24dp"
                    android:layout_gravity="left"
                    android:onClick="passhiden"
                    android:layout_marginLeft="15dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/bink"
                >
                <Button
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_login"
                    android:fontFamily="@font/pnu_medium"
                    android:background="@drawable/button_login"
                    android:text="@string/Register"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                >



            </LinearLayout>


        </LinearLayout>



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>